# GovnoChatClient

./: .gitignore  CMakeLists.txt  GovnoChatClient.pro  GovnoChatClient.pro.user.3e81e03
.github/workflows/: build_and_test.yml  release-on-tag.yml
Client/: CMakeLists.txt  Client.pro  chatwidget.cpp  chatwidget.h  client.cpp  client.h  imessage.cpp  imessage.h  launcher.cpp  launcher.h  loadwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packet.cpp  packet.h  serverstatusmessage.cpp  serverstatusmessage.h  tcpclient.cpp  tcpclient.h.autosave  useridnotification.h  usermessage.h
Client/GUI/Include/: chatmessage.h  chatmodel.h  chatwidget.h  loadingwidget.h  mainwindow.h  settingswidget.h
Client/GUI/Source/: chatmodel.cpp  chatwidget.cpp  loadingwidget.cpp  mainwindow.cpp
Client/Main/Include/: client.h
Client/Main/Source/: client.cpp  main.cpp
Client/Protocol/Include/: packet.h  protocol.h  useridnotification.h
Client/Protocol/Source/: packet.cpp
Client/Tcp/Include/: tcpclient.h
Client/Tcp/Source/: tcpclient.cpp
Test/: CMakeLists.txt  Test.pro  tst_jsontests.cpp
